SERVER-51385 Initialize vector with size before using as output of std::transform